// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<OpenMapModalBtn /> > filters out non-active cities from list of locations 1`] = `
<div
  class="modal fade"
  role="dialog"
  style="display: block;"
  tabindex="-1"
>
  <div
    class="modal-dialog map-modal__modal"
    role="document"
  >
    <div
      class="modal-content map-modal__modal-content"
    >
      <div
        class="map-modal__modal-body modal-body"
      >
        <h3
          class="map-modal__modal-title"
        >
          Foo
          <button
            aria-label="Close"
            class="btn-close float-end"
            type="button"
          />
        </h3>
        <div
          class="leaflet-container leaflet-touch leaflet-grab leaflet-touch-drag leaflet-touch-zoom"
          style="position: relative;"
          tabindex="0"
        >
          <div
            class="leaflet-pane leaflet-map-pane"
            style="left: 0px; top: 0px;"
          >
            <div
              class="leaflet-pane leaflet-tile-pane"
            >
              <div
                class="leaflet-layer "
                style="z-index: 1;"
              >
                <div
                  class="leaflet-tile-container leaflet-zoom-animated"
                  style="z-index: 18; left: 0px; top: 0px;"
                >
                  <img
                    alt=""
                    class="leaflet-tile"
                    src="https://a.tile.openstreetmap.org/0/0/0.png"
                    style="width: 256px; height: 256px; left: -161px; top: -62px;"
                  />
                </div>
              </div>
            </div>
            <div
              class="leaflet-pane leaflet-overlay-pane"
            />
            <div
              class="leaflet-pane leaflet-shadow-pane"
            >
              <img
                alt=""
                class="leaflet-marker-shadow leaflet-zoom-hide"
                src="marker-shadow.png"
                style="margin-left: -12px; margin-top: -41px; width: 41px; height: 41px; left: -29px; top: 62px;"
              />
              <img
                alt=""
                class="leaflet-marker-shadow leaflet-zoom-hide"
                src="marker-shadow.png"
                style="margin-left: -12px; margin-top: -41px; width: 41px; height: 41px; left: 30px; top: -62px;"
              />
            </div>
            <div
              class="leaflet-pane leaflet-marker-pane"
            >
              <img
                alt="Marker"
                class="leaflet-marker-icon leaflet-zoom-hide leaflet-interactive"
                role="button"
                src="marker-icon.png"
                style="margin-left: -12px; margin-top: -41px; width: 25px; height: 41px; left: -29px; top: 62px; z-index: 62;"
                tabindex="0"
              />
              <img
                alt="Marker"
                class="leaflet-marker-icon leaflet-zoom-hide leaflet-interactive"
                role="button"
                src="marker-icon.png"
                style="margin-left: -12px; margin-top: -41px; width: 25px; height: 41px; left: 30px; top: -62px; z-index: -62;"
                tabindex="0"
              />
            </div>
            <div
              class="leaflet-pane leaflet-tooltip-pane"
            />
            <div
              class="leaflet-pane leaflet-popup-pane"
            />
          </div>
          <div
            class="leaflet-control-container"
          >
            <div
              class="leaflet-top leaflet-left"
            >
              <div
                class="leaflet-control-zoom leaflet-bar leaflet-control"
              >
                <a
                  aria-disabled="false"
                  aria-label="Zoom in"
                  class="leaflet-control-zoom-in"
                  href="#"
                  role="button"
                  title="Zoom in"
                >
                  <span
                    aria-hidden="true"
                  >
                    +
                  </span>
                </a>
                <a
                  aria-disabled="true"
                  aria-label="Zoom out"
                  class="leaflet-control-zoom-out leaflet-disabled"
                  href="#"
                  role="button"
                  title="Zoom out"
                >
                  <span
                    aria-hidden="true"
                  >
                    −
                  </span>
                </a>
              </div>
            </div>
            <div
              class="leaflet-top leaflet-right"
            />
            <div
              class="leaflet-bottom leaflet-left"
            />
            <div
              class="leaflet-bottom leaflet-right"
            >
              <div
                class="leaflet-control-attribution leaflet-control"
              >
                <a
                  href="https://leafletjs.com"
                  title="A JavaScript library for interactive maps"
                >
                  Leaflet
                </a>
                 
                <span
                  aria-hidden="true"
                >
                  |
                </span>
                 © 
                <a
                  href="https://osm.org/copyright"
                >
                  OpenStreetMap
                </a>
                 contributors
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<OpenMapModalBtn /> > filters out non-active cities from list of locations 2`] = `
<div
  class="modal fade"
  role="dialog"
  style="display: block;"
  tabindex="-1"
>
  <div
    class="modal-dialog map-modal__modal"
    role="document"
  >
    <div
      class="modal-content map-modal__modal-content"
    >
      <div
        class="map-modal__modal-body modal-body"
      >
        <h3
          class="map-modal__modal-title"
        >
          Foo
          <button
            aria-label="Close"
            class="btn-close float-end"
            type="button"
          />
        </h3>
        <div
          class="leaflet-container leaflet-touch leaflet-grab leaflet-touch-drag leaflet-touch-zoom"
          style="position: relative;"
          tabindex="0"
        >
          <div
            class="leaflet-pane leaflet-map-pane"
            style="left: 0px; top: 0px;"
          >
            <div
              class="leaflet-pane leaflet-tile-pane"
            >
              <div
                class="leaflet-layer "
                style="z-index: 1;"
              >
                <div
                  class="leaflet-tile-container leaflet-zoom-animated"
                  style="z-index: 18; left: 0px; top: 0px;"
                >
                  <img
                    alt=""
                    class="leaflet-tile"
                    src="https://a.tile.openstreetmap.org/10/762/0.png"
                    style="width: 256px; height: 256px; left: -80px; top: 0px;"
                  />
                </div>
              </div>
            </div>
            <div
              class="leaflet-pane leaflet-overlay-pane"
            />
            <div
              class="leaflet-pane leaflet-shadow-pane"
            >
              <img
                alt=""
                class="leaflet-marker-shadow leaflet-zoom-hide"
                src="marker-shadow.png"
                style="margin-left: -12px; margin-top: -41px; width: 41px; height: 41px; left: 0px; top: 0px;"
              />
            </div>
            <div
              class="leaflet-pane leaflet-marker-pane"
            >
              <img
                alt="Marker"
                class="leaflet-marker-icon leaflet-zoom-hide leaflet-interactive"
                role="button"
                src="marker-icon.png"
                style="margin-left: -12px; margin-top: -41px; width: 25px; height: 41px; left: 0px; top: 0px; z-index: 0;"
                tabindex="0"
              />
            </div>
            <div
              class="leaflet-pane leaflet-tooltip-pane"
            />
            <div
              class="leaflet-pane leaflet-popup-pane"
            />
          </div>
          <div
            class="leaflet-control-container"
          >
            <div
              class="leaflet-top leaflet-left"
            >
              <div
                class="leaflet-control-zoom leaflet-bar leaflet-control"
              >
                <a
                  aria-disabled="false"
                  aria-label="Zoom in"
                  class="leaflet-control-zoom-in"
                  href="#"
                  role="button"
                  title="Zoom in"
                >
                  <span
                    aria-hidden="true"
                  >
                    +
                  </span>
                </a>
                <a
                  aria-disabled="false"
                  aria-label="Zoom out"
                  class="leaflet-control-zoom-out"
                  href="#"
                  role="button"
                  title="Zoom out"
                >
                  <span
                    aria-hidden="true"
                  >
                    −
                  </span>
                </a>
              </div>
            </div>
            <div
              class="leaflet-top leaflet-right"
            />
            <div
              class="leaflet-bottom leaflet-left"
            />
            <div
              class="leaflet-bottom leaflet-right"
            >
              <div
                class="leaflet-control-attribution leaflet-control"
              >
                <a
                  href="https://leafletjs.com"
                  title="A JavaScript library for interactive maps"
                >
                  Leaflet
                </a>
                 
                <span
                  aria-hidden="true"
                >
                  |
                </span>
                 © 
                <a
                  href="https://osm.org/copyright"
                >
                  OpenStreetMap
                </a>
                 contributors
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<OpenMapModalBtn /> filters out non-active cities from list of locations 1`] = `
<div
  class="modal fade"
  role="dialog"
  style="display: block;"
  tabindex="-1"
>
  <div
    class="modal-dialog map-modal__modal"
    role="document"
  >
    <div
      class="modal-content map-modal__modal-content"
    >
      <div
        class="map-modal__modal-body modal-body"
      >
        <h3
          class="map-modal__modal-title"
        >
          Foo
          <button
            aria-label="Close"
            class="btn-close float-end"
            type="button"
          />
        </h3>
        <div
          class="leaflet-container leaflet-touch leaflet-grab leaflet-touch-drag leaflet-touch-zoom"
          style="position: relative;"
          tabindex="0"
        >
          <div
            class="leaflet-pane leaflet-map-pane"
            style="left: 0px; top: 0px;"
          >
            <div
              class="leaflet-pane leaflet-tile-pane"
            >
              <div
                class="leaflet-layer "
                style="z-index: 1;"
              >
                <div
                  class="leaflet-tile-container leaflet-zoom-animated"
                  style="z-index: 18; left: 0px; top: 0px;"
                >
                  <img
                    alt=""
                    class="leaflet-tile"
                    src="https://a.tile.openstreetmap.org/0/0/0.png"
                    style="width: 256px; height: 256px; left: -161px; top: -62px;"
                  />
                </div>
              </div>
            </div>
            <div
              class="leaflet-pane leaflet-overlay-pane"
            />
            <div
              class="leaflet-pane leaflet-shadow-pane"
            >
              <img
                alt=""
                class="leaflet-marker-shadow leaflet-zoom-hide"
                src="marker-shadow.png"
                style="margin-left: -12px; margin-top: -41px; width: 41px; height: 41px; left: -29px; top: 62px;"
              />
              <img
                alt=""
                class="leaflet-marker-shadow leaflet-zoom-hide"
                src="marker-shadow.png"
                style="margin-left: -12px; margin-top: -41px; width: 41px; height: 41px; left: 30px; top: -62px;"
              />
            </div>
            <div
              class="leaflet-pane leaflet-marker-pane"
            >
              <img
                alt="Marker"
                class="leaflet-marker-icon leaflet-zoom-hide leaflet-interactive"
                role="button"
                src="marker-icon.png"
                style="margin-left: -12px; margin-top: -41px; width: 25px; height: 41px; left: -29px; top: 62px; z-index: 62;"
                tabindex="0"
              />
              <img
                alt="Marker"
                class="leaflet-marker-icon leaflet-zoom-hide leaflet-interactive"
                role="button"
                src="marker-icon.png"
                style="margin-left: -12px; margin-top: -41px; width: 25px; height: 41px; left: 30px; top: -62px; z-index: -62;"
                tabindex="0"
              />
            </div>
            <div
              class="leaflet-pane leaflet-tooltip-pane"
            />
            <div
              class="leaflet-pane leaflet-popup-pane"
            />
          </div>
          <div
            class="leaflet-control-container"
          >
            <div
              class="leaflet-top leaflet-left"
            >
              <div
                class="leaflet-control-zoom leaflet-bar leaflet-control"
              >
                <a
                  aria-disabled="false"
                  aria-label="Zoom in"
                  class="leaflet-control-zoom-in"
                  href="#"
                  role="button"
                  title="Zoom in"
                >
                  <span
                    aria-hidden="true"
                  >
                    +
                  </span>
                </a>
                <a
                  aria-disabled="true"
                  aria-label="Zoom out"
                  class="leaflet-control-zoom-out leaflet-disabled"
                  href="#"
                  role="button"
                  title="Zoom out"
                >
                  <span
                    aria-hidden="true"
                  >
                    −
                  </span>
                </a>
              </div>
            </div>
            <div
              class="leaflet-top leaflet-right"
            />
            <div
              class="leaflet-bottom leaflet-left"
            />
            <div
              class="leaflet-bottom leaflet-right"
            >
              <div
                class="leaflet-control-attribution leaflet-control"
              >
                <a
                  href="https://leafletjs.com"
                  title="A JavaScript library for interactive maps"
                >
                  Leaflet
                </a>
                 
                <span
                  aria-hidden="true"
                >
                  |
                </span>
                 © 
                <a
                  href="https://osm.org/copyright"
                >
                  OpenStreetMap
                </a>
                 contributors
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<OpenMapModalBtn /> filters out non-active cities from list of locations 2`] = `
<div
  class="modal fade"
  role="dialog"
  style="display: block;"
  tabindex="-1"
>
  <div
    class="modal-dialog map-modal__modal"
    role="document"
  >
    <div
      class="modal-content map-modal__modal-content"
    >
      <div
        class="map-modal__modal-body modal-body"
      >
        <h3
          class="map-modal__modal-title"
        >
          Foo
          <button
            aria-label="Close"
            class="btn-close float-end"
            type="button"
          />
        </h3>
        <div
          class="leaflet-container leaflet-touch leaflet-grab leaflet-touch-drag leaflet-touch-zoom"
          style="position: relative;"
          tabindex="0"
        >
          <div
            class="leaflet-pane leaflet-map-pane"
            style="left: 0px; top: 0px;"
          >
            <div
              class="leaflet-pane leaflet-tile-pane"
            >
              <div
                class="leaflet-layer "
                style="z-index: 1;"
              >
                <div
                  class="leaflet-tile-container leaflet-zoom-animated"
                  style="z-index: 18; left: 0px; top: 0px;"
                >
                  <img
                    alt=""
                    class="leaflet-tile"
                    src="https://a.tile.openstreetmap.org/10/762/0.png"
                    style="width: 256px; height: 256px; left: -80px; top: 0px;"
                  />
                </div>
              </div>
            </div>
            <div
              class="leaflet-pane leaflet-overlay-pane"
            />
            <div
              class="leaflet-pane leaflet-shadow-pane"
            >
              <img
                alt=""
                class="leaflet-marker-shadow leaflet-zoom-hide"
                src="marker-shadow.png"
                style="margin-left: -12px; margin-top: -41px; width: 41px; height: 41px; left: 0px; top: 0px;"
              />
            </div>
            <div
              class="leaflet-pane leaflet-marker-pane"
            >
              <img
                alt="Marker"
                class="leaflet-marker-icon leaflet-zoom-hide leaflet-interactive"
                role="button"
                src="marker-icon.png"
                style="margin-left: -12px; margin-top: -41px; width: 25px; height: 41px; left: 0px; top: 0px; z-index: 0;"
                tabindex="0"
              />
            </div>
            <div
              class="leaflet-pane leaflet-tooltip-pane"
            />
            <div
              class="leaflet-pane leaflet-popup-pane"
            />
          </div>
          <div
            class="leaflet-control-container"
          >
            <div
              class="leaflet-top leaflet-left"
            >
              <div
                class="leaflet-control-zoom leaflet-bar leaflet-control"
              >
                <a
                  aria-disabled="false"
                  aria-label="Zoom in"
                  class="leaflet-control-zoom-in"
                  href="#"
                  role="button"
                  title="Zoom in"
                >
                  <span
                    aria-hidden="true"
                  >
                    +
                  </span>
                </a>
                <a
                  aria-disabled="false"
                  aria-label="Zoom out"
                  class="leaflet-control-zoom-out"
                  href="#"
                  role="button"
                  title="Zoom out"
                >
                  <span
                    aria-hidden="true"
                  >
                    −
                  </span>
                </a>
              </div>
            </div>
            <div
              class="leaflet-top leaflet-right"
            />
            <div
              class="leaflet-bottom leaflet-left"
            />
            <div
              class="leaflet-bottom leaflet-right"
            >
              <div
                class="leaflet-control-attribution leaflet-control"
              >
                <a
                  href="https://leafletjs.com"
                  title="A JavaScript library for interactive maps"
                >
                  Leaflet
                </a>
                 
                <span
                  aria-hidden="true"
                >
                  |
                </span>
                 © 
                <a
                  href="https://osm.org/copyright"
                >
                  OpenStreetMap
                </a>
                 contributors
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
